FLY wire David/force-app/main/default/objects/Lead/fields/SAL_Campaign_Touch__c.field-meta.xml
<CustomField>
    <fullName>SAL_Campaign_Touch__c</fullName>
    <label>SWL Campaign Touch</label>
    <type>TextArea</type>
</CustomField>