FLY wire David/force-app/main/default/objects/Lead/fields/SAL_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>SAL_Timestamp__c</fullName>
    <description>Date the person move to SAL status.</description>
    <inlineHelpText>Date the person move to SAL status.</inlineHelpText>
    <label>OBS_SAL Timestamp</label>
    <type>Date</type>
</CustomField>