FLY wire David/force-app/main/default/objects/Lead/fields/SQL_Campaign_Touch__c.field-meta.xml
<CustomField>
    <fullName>SQL_Campaign_Touch__c</fullName>
    <description>The latest SQL Campaign on the person&apos;s record.</description>
    <inlineHelpText>The latest SQL Campaign on the person&apos;s record.</inlineHelpText>
    <label>SQL Campaign Touch</label>
    <type>TextArea</type>
</CustomField>