FLY wire David/force-app/main/default/objects/Lead/fields/Student_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Student_Enrollment__c</fullName>
    <description>This field is used on all EDU demo request website forms to capture total enrollment count at universities. SAL-4653</description>
    <label>Student Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>