FLY wire David/force-app/main/default/objects/Lead/fields/SWL_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SWL_Date_Time__c</fullName>
    <description>Date the person move to SWL status.</description>
    <inlineHelpText>Date the person move to SWL status.</inlineHelpText>
    <label>SWL Date Time</label>
    <type>DateTime</type>
</CustomField>