FLY wire David/force-app/main/default/objects/Lead/fields/TEMP_Person_Score__c.field-meta.xml
<CustomField>
    <fullName>TEMP_Person_Score__c</fullName>
    <description>SAL-4653 – temp score field for new person scoring in Marketo.</description>
    <label>TEMP Person Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>