FLY wire David/force-app/main/default/objects/Lead/fields/texcellency__DefHC_ExecutiveID__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_ExecutiveID__c</fullName>
    <label>DHC Executive ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>