FLY wire David/force-app/main/default/objects/Lead/fields/texcellency__DefHC_HospitalID__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_HospitalID__c</fullName>
    <description>Definitive Hospital ID</description>
    <label>Definitive ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>