FLY wire David/force-app/main/default/objects/Lead/fields/texcellency__DefHC_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>DHC Is Active</label>
    <type>Checkbox</type>
</CustomField>