FLY wire David/force-app/main/default/objects/Lead/fields/texcellency__DefHC_SyncTime__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_SyncTime__c</fullName>
    <description>Last time the lead data was synced with DefHC database.</description>
    <label>DHC Sync Time</label>
    <type>DateTime</type>
</CustomField>