FLY wire David/force-app/main/default/objects/Lead/fields/Training_Lead__c.field-meta.xml
<CustomField>
    <fullName>Training_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing field to designate leads from trainings where the account lookup field could not be matched and requires additional evaluation to convert them to a customer account. Marketo, marketing, &amp; admin only.</description>
    <inlineHelpText>Marketing field to designate leads from trainings where the account lookup field could not be matched and requires additional evaluation to convert them to a customer account.</inlineHelpText>
    <label>Training Lead</label>
    <type>Checkbox</type>
</CustomField>