FLY wire David/force-app/main/default/objects/Lead/fields/Travel_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Travel_Round_Robin__c</fullName>
    <description>Assigns Travel Round Robin ID to Lead Record during upload.</description>
    <formula>MOD(VALUE(Lead_Number__c),5)+1</formula>
    <inlineHelpText>Assigns Travel Round Robin ID to Lead Record during upload.</inlineHelpText>
    <label>Travel Round Robin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>