FLY wire David/force-app/main/default/objects/Lead/fields/Website_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Website_Email_Domain__c</fullName>
    <description>USED in Lead 2 Acct match flow – do not OBS</description>
    <formula>IF(
(LEN(Email_Domain_Capture__c)-LEN(SUBSTITUTE(LOWER(Email_Domain_Capture__c),&quot;.&quot;,&quot;&quot;)) &gt; 1) ,
(SUBSTITUTE(Email_Domain_Capture__c, LEFT(Email_Domain_Capture__c, FIND(&quot;.&quot;, Email_Domain_Capture__c)), NULL))
,Email_Domain_Capture__c)</formula>
    <inlineHelpText>Pulls account email domain from website capture field.</inlineHelpText>
    <label>Website Email Domain</label>
    <type>Text</type>
</CustomField>