FLY wire David/force-app/main/default/objects/Lead/fields/WeChat_ID__c.field-meta.xml
<CustomField>
    <fullName>WeChat_ID__c</fullName>
    <description>This field should be manually populated by the Sales team for China based leads. This field will be used to auto generate a temp email address for leads sourced from WeChat that do not have a known email address.
SAL-5035</description>
    <inlineHelpText>For Leads from China Only, Enter Personal WeChat ID from the lead&apos;s WeChat profile</inlineHelpText>
    <label>WeChat ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>