FLY wire David/force-app/main/default/objects/Lead/fields/X1st_Touch_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>X1st_Touch_Date_Time__c</fullName>
    <description>The date and time the person engaged with the 1st touch marketing campaign.</description>
    <inlineHelpText>The date and time the person engaged with the 1st touch marketing campaign.</inlineHelpText>
    <label>1st Touch Date Time</label>
    <type>DateTime</type>
</CustomField>