FLY wire David/force-app/main/default/objects/Lead/fields/x1st_Touch_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>x1st_Touch_Timestamp__c</fullName>
    <label>OBS_1st Touch Timestamp</label>
    <type>Date</type>
</CustomField>