FLY wire David/force-app/main/default/objects/Lead/validationRules/Admin_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Admin_Owner</fullName>
    <active>true</active>
    <description>Prevent conversion of Admin owned without changing the owner.</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;B - Marketo Integration&quot;,
IsConverted &amp;&amp; Owner:User.FirstName = &quot;Marketo&quot;
)
&amp;&amp; Lead_Val_Bypass__c = False</errorConditionFormula>
    <errorMessage>Can&apos;t convert a lead Owned by Admin, you must change the owner to yourself first.</errorMessage>
</ValidationRule>