FLY wire David/force-app/main/default/objects/Lead/validationRules/Company_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_required</fullName>
    <active>true</active>
    <description>Company name required to create and save lead record. Created to keep the database clean in the event of potential workarounds or API integrations.</description>
    <errorConditionFormula>AND(
ISNEW(),
ISBLANK(Company)
)
&amp;&amp; Lead_Val_Bypass__c = False</errorConditionFormula>
    <errorMessage>Company name required to create and save lead record.</errorMessage>
</ValidationRule>