FLY wire David/force-app/main/default/objects/Lead/validationRules/Email_Address_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Address_Required</fullName>
    <active>true</active>
    <description>Email address required to create new record. Created to keep the database clean in the event of potential workarounds or API integrations.</description>
    <errorConditionFormula>AND(
ISNEW(),
ISBLANK(Email)
)
&amp;&amp; Lead_Val_Bypass__c = False</errorConditionFormula>
    <errorMessage>Email address required to create new record.</errorMessage>
</ValidationRule>