FLY wire David/force-app/main/default/objects/Lead/validationRules/First_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Required</fullName>
    <active>true</active>
    <description>First name required to create new lead record. Created to keep the database clean in the event of potential workarounds or API integrations.</description>
    <errorConditionFormula>AND(
ISNEW(),
ISBLANK(FirstName)
)
&amp;&amp; Lead_Val_Bypass__c = False</errorConditionFormula>
    <errorMessage>First name required to create new lead record.</errorMessage>
</ValidationRule>