FLY wire David/force-app/main/default/objects/Lead/validationRules/Last_name_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_name_required</fullName>
    <active>true</active>
    <description>Last name is required to create and save the lead record. Created to keep the database clean in the event of potential workarounds or API integrations.</description>
    <errorConditionFormula>AND(
ISNEW(),
ISBLANK(LastName)
)
&amp;&amp; Lead_Val_Bypass__c = False</errorConditionFormula>
    <errorMessage>Last name is required to create and save the lead record.</errorMessage>
</ValidationRule>