FLY wire David/force-app/main/default/objects/Lead/validationRules/LeadIndustry_CantBeTravel.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadIndustry_CantBeTravel</fullName>
    <active>false</active>
    <description>When a Lead is converted, Industry cannot be Travel, must select “Accommodations”, &quot;DMC&quot; or &quot;Travel Operator”.
Deactivated: Moved this VR to the Opportunity</description>
    <errorConditionFormula>IsConverted &amp;&amp; ISPICKVAL(Lead_Industry__c, &quot;Travel&quot;)
&amp;&amp; Lead_Val_Bypass__c = False</errorConditionFormula>
    <errorDisplayField>Lead_Industry__c</errorDisplayField>
    <errorMessage>Select “Accommodations”, &quot;DMC&quot; or &quot;Travel Operator”</errorMessage>
</ValidationRule>