FLY wire David/force-app/main/default/objects/Lead/validationRules/Person_Status_Picklist_Options.validationRule-meta.xml
<ValidationRule>
    <fullName>Person_Status_Picklist_Options</fullName>
    <active>true</active>
    <description>Updated for new lead person status field. Only allows users to change status to SWL, SQL, Marketing Only, Nurture, or Disqualified.
SAL-2335:Updated to exclude Brette/Kim
SAL-2365:Updated to exclude Josh</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;B - Marketo Integration&apos;,
$User.User_LongID__c &lt;&gt; &apos;005f2000009yztxAAA&apos;,
$User.User_LongID__c &lt;&gt; &apos;0058W00000AFZm6QAH&apos;,
$User.User_LongID__c &lt;&gt; &apos;0058W00000AGAeiQAH&apos;,
NOT(ISNEW()),
ISCHANGED(Lead_Person_Status__c),
NOT(ISBLANK(TEXT(Lead_Person_Status__c))),
TEXT(Lead_Person_Status__c)&lt;&gt;&quot;SWL (Sales Working Lead)&quot;,
TEXT(Lead_Person_Status__c)&lt;&gt;&quot;SQL (Sales Qualified Lead)&quot;,
TEXT(Lead_Person_Status__c)&lt;&gt;&quot;Marketing Only&quot;,
TEXT(Lead_Person_Status__c)&lt;&gt;&quot;Nurture&quot;,
TEXT(Lead_Person_Status__c)&lt;&gt;&quot;Disqualified&quot;,
TEXT(Lead_Person_Status__c)&lt;&gt;&quot;Partner&quot;
)
&amp;&amp; Lead_Val_Bypass__c = False</errorConditionFormula>
    <errorMessage>You can only update the status to SWL, SQL, Marketing Only, Nurture, Partner, or Disqualified.</errorMessage>
</ValidationRule>