FLY wire David/force-app/main/default/objects/Lead/validationRules/Status_Picklist_Options.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Picklist_Options</fullName>
    <active>false</active>
    <description>Only allows users to change status to SWL, SQL, Marketing Only, Nurture, or Disqualified.
SAL-2335:Updated to exclude Brette/Kim
SAL-2365:Updated to exclude Josh</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;B - Marketo Integration&apos;,
$User.User_LongID__c &lt;&gt; &apos;005f2000009yztxAAA&apos;,
$User.User_LongID__c &lt;&gt; &apos;0058W00000AFZm6QAH&apos;,
$User.User_LongID__c &lt;&gt; &apos;0058W00000AGAeiQAH&apos;,
NOT(ISNEW()),
ISCHANGED(Status),
NOT(ISBLANK(TEXT(Status))),
TEXT(Status)&lt;&gt;&quot;SWL (Sales Working Lead)&quot;,
TEXT(Status)&lt;&gt;&quot;SQL (Sales Qualified Lead)&quot;,
TEXT(Status)&lt;&gt;&quot;Marketing Only&quot;,
TEXT(Status)&lt;&gt;&quot;Nurture&quot;,
TEXT(Status)&lt;&gt;&quot;Disqualified&quot;
)
&amp;&amp; Lead_Val_Bypass__c = False</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You can only update the status to SWL, SQL, Marketing Only, Nurture, or Disqualified.</errorMessage>
</ValidationRule>