FLY wire David/force-app/main/default/objects/Lead/listViews/Admin_Edu_Leads.listView-meta.xml
<ListView>
    <fullName>Admin_Edu_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATE</columns>
    <columns>Lead_Person_Status__c</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.INDUSTRY</field>
        <operation>equals</operation>
        <value>Education</value>
    </filters>
    <label>Admin Edu Leads</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>