FLY wire David/force-app/main/default/objects/Lead/listViews/Agent_Leads.listView-meta.xml
<ListView>
    <fullName>Agent_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>Lead_Person_Status__c</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Industry__c</field>
        <operation>equals</operation>
        <value>Education Agent</value>
    </filters>
    <label>Agent Leads</label>
</ListView>