FLY wire David/force-app/main/default/objects/Lead/listViews/B2B_Open_MQLs.listView-meta.xml
<ListView>
    <fullName>B2B_Open_MQLs</fullName>
    <columns>MQL_Timestamp__c</columns>
    <columns>Lead_Person_Status__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Lead_Industry__c</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Industry__c</field>
        <operation>equals</operation>
        <value>Business</value>
    </filters>
    <filters>
        <field>Lead_Person_Status__c</field>
        <operation>equals</operation>
        <value>MQL (Marketing Qualified Lead)</value>
    </filters>
    <label>B2B - Open MQLs</label>
</ListView>