FLY wire David/force-app/main/default/objects/Lead/listViews/Blastness_Booking_BDR_Leads.listView-meta.xml
<ListView>
    <fullName>Blastness_Booking_BDR_Leads</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>BDR_Owner__c</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Lead_Person_Status__c</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>Lead_Membership_Association__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Partner__c</field>
        <operation>equals</operation>
        <value>Blastness Booking</value>
    </filters>
    <label>Blastness Booking BDR Leads</label>
    <sharedTo>
        <group>All_Travel</group>
    </sharedTo>
</ListView>