FLY wire David/force-app/main/default/objects/Lead/listViews/Cait_Accommodations.listView-meta.xml
<ListView>
    <fullName>Cait_Accommodations</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BDR_Owner__c</field>
        <operation>equals</operation>
        <value>Caitlin Cowdrey</value>
    </filters>
    <filters>
        <field>Lead_Industry__c</field>
        <operation>equals</operation>
        <value>Accommodations</value>
    </filters>
    <label>Cait Accommodations</label>
    <sharedTo>
        <group>All_Travel</group>
    </sharedTo>
</ListView>