FLY wire David/force-app/main/default/objects/Lead/listViews/Cait_Chile.listView-meta.xml
<ListView>
    <fullName>Cait_Chile</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Lead_Person_Status__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BDR_Owner__c</field>
        <operation>equals</operation>
        <value>Caitlin Cowdrey</value>
    </filters>
    <filters>
        <field>LEAD.COUNTRY</field>
        <operation>equals</operation>
        <value>Chile</value>
    </filters>
    <label>Cait Chile</label>
    <sharedTo>
        <group>All_Travel</group>
    </sharedTo>
</ListView>