FLY wire David/force-app/main/default/objects/Lead/listViews/Costa_Rican_Leads.listView-meta.xml
<ListView>
    <fullName>Costa_Rican_Leads</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>Lead_Person_Status__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>BDR_Owner__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>Lead_Disqualified_Reason__c</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.COUNTRY</field>
        <operation>equals</operation>
        <value>Costa Rica</value>
    </filters>
    <filters>
        <field>Lead_Industry__c</field>
        <operation>equals</operation>
        <value>Accommodations,DMC,Travel,Travel Operator</value>
    </filters>
    <filters>
        <field>LEAD.LAST_ACTIVITY</field>
        <operation>lessThan</operation>
        <value>9/20/2023</value>
    </filters>
    <filters>
        <field>LEAD.LAST_ACTIVITY</field>
        <operation>equals</operation>
    </filters>
    <label>Costa Rican Leads</label>
    <sharedTo>
        <role>AE_Travel</role>
    </sharedTo>
</ListView>