FLY wire David/force-app/main/default/objects/Lead/listViews/Disqualified_NO_Response1.listView-meta.xml
<ListView>
    <fullName>Disqualified_NO_Response1</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>BDR_Owner__c</columns>
    <columns>LEAD.COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Industry__c</field>
        <operation>equals</operation>
        <value>Accommodations,DMC,Travel,Travel Operator</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Disqualified</value>
    </filters>
    <filters>
        <field>Lead_Disqualified_Reason__c</field>
        <operation>equals</operation>
        <value>No Response</value>
    </filters>
    <filters>
        <field>LEAD.LAST_ACTIVITY</field>
        <operation>lessThan</operation>
        <value>5/1/2023</value>
    </filters>
    <label>Disqualified- NO Response</label>
</ListView>