FLY wire David/force-app/main/default/objects/Lead/listViews/Flywire_Email_Leads_To_Delete.listView-meta.xml
<ListView>
    <fullName>Flywire_Email_Leads_To_Delete</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Lead_Disqualified_Reason__c</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.EMAIL</field>
        <operation>contains</operation>
        <value>flywire.com</value>
    </filters>
    <label>ADM Flywire Email Leads - To Delete</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>