FLY wire David/force-app/main/default/objects/Lead/listViews/Global_Payments_Leads.listView-meta.xml
<ListView>
    <fullName>Global_Payments_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Account__c</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner_Type__c</field>
        <operation>equals</operation>
        <value>Banking Partner,Payment Service Provider</value>
    </filters>
    <label>Global Payments Leads</label>
    <sharedTo>
        <role>Global_Payments_PM</role>
        <role>Global_Payments_RM</role>
    </sharedTo>
</ListView>